# SmoothCrawler-Cluster

./: .coveragerc  .gitcommitrules  .gitignore  .pre-commit-config.yaml  .pylintrc  .readthedocs.yaml  Dockerfile_pytest  LICENSE  README.md  codecov.yml  pyproject.toml  pytest.ini  pytest_Dockerfile  requirements-test.txt  requirements.txt  setup.py  tox.ini
.github/: release-notes.md  release-title.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/actions/: prepare_test_items.yaml
.github/ci-config/: testing.env
.github/workflows/: ci-cd.yml  ci-develop.yml  ci-release.yml  docker-test.yaml  organize_and_generate_testing_report.yaml  poetry-test.yaml  pre-building_test.yaml  prepare_test_items.yaml  run_test_items_via_pytest.yaml  run_test_items_via_pytest_with_msg_queue_sys.yaml  test-dockerfile.yaml  test-poetry.yaml  test-tox.yaml  tox-test.yaml  upload_code_report_to_codacy.yaml  upload_test_report_to_codecov.yaml
docs/: Makefile  make.bat
docs/smoothcrawler_cluster/: advanced_usage.rst  conf.py  index.rst  installation.rst  introduction.rst  quickly_start.rst
requirements/: requirements-doc.txt  requirements-test.txt
scripts/: run_pytest_in_develop.sh
scripts/ci/: check_zookeeper-ip.sh  get-integration-test-paths.sh  get-unit-test-paths.sh
scripts/docker/: pytest_Dockerfile  run-pytest.sh
scripts/pycode/: README.md  assign_task.py  crawler_components.py  crawler_main.py  sample_crawler.py  sc-cluster_client_Dockerfile  sc-cluster_client_docker-compose.yaml  sc-cluster_docker-compose.yaml
scripts/test_in_docker/: README.md  pytest_Dockerfile
smoothcrawler_cluster/: __init__.py  __pkg_info__.py  crawler.py  election.py  exceptions.py  register.py
smoothcrawler_cluster/_utils/: __init__.py  converter.py  metadata.py  zookeeper.py
smoothcrawler_cluster/crawler/: __init__.py  adapter.py  attributes.py  cluster.py  crawlers.py  dispatcher.py  workflow.py
smoothcrawler_cluster/model/: __init__.py  (+3 more)
test/: _assertion.py  _config.py  _metadata_values.py  _values.py  _verify.py  _verify_metadata.py
(+136 files in other folders)
